--- a/style.css
+++ b/style.css
@@ -1,5 +1,32 @@
 * {
   padding: 0;
-  border: 0;
+  margin: 0;
   box-sizing: border-box;
+}
+
+.container {
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 1fr 4fr;
+}
+
+.container > div {
+  border: 1px solid black;
+}
+
+.sidebar {
+  grid-column: 1;
+  grid-row: 1 / 3;
+}
+
+.header {
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.main-content {
+  grid-column: 2;
+  grid-row: 2;
 }
