--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
 
 :root {
   --primary-color: #1992d4;
+  --border-color: #facc15;
+  --card-content-color: #636363;
   /* White color */
   --icon-color: brightness(0) saturate(100%) invert(100%) sepia(100%)
     saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
@@ -18,11 +20,8 @@
 }
 
 .container {
-  width: 100vw;
-  height: 100vh;
   display: grid;
   grid-template-columns: 1fr 5fr;
-  grid-template-rows: 1fr 4fr;
 }
 
 /* Sidebar */
@@ -90,12 +89,15 @@
 /* Header */
 
 .header {
+  height: max-content;
   grid-column: 2;
   grid-row: 1;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 1rem 4rem;
   display: grid;
   grid-template-columns: 4fr 2fr;
+  row-gap: 30px;
+  z-index: 2;
 }
 
 .header__searchbar {
@@ -195,4 +197,145 @@
 .main-content {
   grid-column: 2;
   grid-row: 2;
+  padding: 2rem;
+  display: grid;
+  grid-template-columns: 5fr 2fr;
+  gap: 30px;
+  background-color: #e2e8f0;
+  height: fit-content;
+}
+
+.main-content__item {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+/* First item on the grid span all rows */
+.main-content__item:first-child {
+  grid-column: 1;
+  grid-row: 1 / span 2;
+}
+
+.main-content__item__title {
+  font-weight: 500;
+}
+
+.projects {
+  display: grid;
+  gap: 30px;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  height: 100%;
+}
+
+.card {
+  height: 100%;
+  border-radius: 15px;
+  background: #fff;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.project-card {
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  overflow: hidden;
+}
+
+.project-card__border {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 10px;
+  background-color: var(--border-color);
+}
+
+.project-card__title {
+  margin-bottom: 5px;
+}
+
+.project-card__content {
+  color: var(--card-content-color);
+}
+
+.project-card__buttons {
+  display: flex;
+  gap: 15px;
+  justify-content: flex-end;
+  margin-top: 30px;
+}
+
+.project-card__button {
+  cursor: pointer;
+  background-color: transparent;
+  outline: none;
+  padding: 5px;
+  border: none;
+  border-radius: 10px;
+}
+
+.project-card__button:hover {
+  filter: var(--icon-hover-color);
+}
+
+.project-card__button__icon {
+  width: 24px;
+}
+
+.announcements-card {
+  padding: 30px 40px;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 15px;
+}
+
+.announcements-card__divider {
+  height: 1px;
+  border: none;
+  background-color: #d2d2d2;
+}
+
+.announcements-card__item__title {
+  font-size: 1.1rem;
+  margin-bottom: 5px;
+}
+
+.announcements-card__item__content {
+  color: var(--card-content-color);
+}
+
+.trending-card {
+  padding: 15px 25px;
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.trending-card__item {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  padding: 10px;
+}
+
+.trending-card__item__user-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.trending-card__item__user-avatar {
+  width: 64px;
+  border-radius: 50%;
+  align-self: center;
+}
+
+.trending-card__item__user-info__username {
+  font-weight: 500;
+  margin-bottom: 5px;
+}
+
+.trending-card__item__user-info__project-name {
+  color: var(--card-content-color);
 }
